updated config scripts

--- a/vcall/nextflow.config
+++ b/vcall/nextflow.config
@@ -1,4 +1,4 @@
-includeConfig '/home/kesoh/workflows/vcall/configs/generalSettings.config'
+includeConfig "${projectDir}/configs/generalSettings.config"
 
 params {
     fastqDir = 'NULL'
