--- a/variantCalling/configs/generalSettings.config
+++ b/variantCalling/configs/generalSettings.config
@@ -51,6 +51,11 @@ process {
         cpus = 24
         memory = 100.GB
     }
+    withLabel:readAligner {
+        time = 30.h
+        cpus = 24
+        memory = 100.GB
+    }
     withLabel:baseRecalibrator {
         time = 2.h
         cpus = 24
@@ -86,8 +91,8 @@ process {
     withLabel:samtools {
         container = "${params.containersDir}samtools_1.11.sif"
     }
-    withLabel:bwa {
-        container = "${params.containersDir}bwa_0.7.17.sif"
+    withLabel:bwa_bgzip {
+        container = "${params.containersDir}bwa_bgzip_latest.sif"
     }
     withLabel:gatk {
         container = "${params.containersDir}gatk_latest.sif"
@@ -98,6 +103,8 @@ process {
     withLabel:multiqc {
         container = "${params.containersDir}multiqc_latest.sif"
     }
-
+    withLabel:bgzip {
+        container = "${params.containersDir}bgzip_latest.sif"
+    }
 }
 
