--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -1,41 +1,34 @@
-executor {
-    name = 'pbspro'
-    queue = 'serial'
-    queueSize = 10
-}
+/* ---------- CHPC PATHS FOR PERSONAL INFO: UNCOMMENT TO USE ON CHPC
+*  params {
+*      referenceDir = '/mnt/lustre/users/kesoh/imputationReference/'
+*      fastaRef = '/mnt/lustre/groups/1000genomes/annotation/REF_VC/hg19/ucsc.hg19.fasta'
+*      dbsnp = '/mnt/lustre/groups/CBBI1243/KEVIN/db/dbsnp_138.hg19.vcf.gz'
+*      indelsRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.indels.hg19.sites.vcf.gz'
+*      hapmap = '/mnt/lustre/groups/CBBI1243/KEVIN/db/hapmap_3.3.hg19.sites.vcf.gz'
+*      omniRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_omni2.5.hg19.sites.vcf.gz'
+*      snpRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz'
+*      containersDir = '/mnt/lustre/groups/CBBI1243/KEVIN/containers/'
+*  }
+*/
 
 params {
-    referenceDir = '/mnt/lustre/users/kesoh/imputationReference/'
-    fastaRef = '/mnt/lustre/groups/1000genomes/annotation/REF_VC/hg19/ucsc.hg19.fasta'
-    dbsnp = '/mnt/lustre/groups/CBBI1243/KEVIN/db/dbsnp_138.hg19.vcf.gz'
-    indelsRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.indels.hg19.sites.vcf.gz'
-    hapmap = '/mnt/lustre/groups/CBBI1243/KEVIN/db/hapmap_3.3.hg19.sites.vcf.gz'
-    omniRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_omni2.5.hg19.sites.vcf.gz'
-    snpRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz'
-    containersDir = '/mnt/lustre/groups/CBBI1243/KEVIN/containers/'
-}
-
-singularity {
-    enabled = true
-    automounts = true
-    cacheDir = "${HOME}/singularity"
+    containersDir = '/scratch/eshkev001/containers/'
+    referenceDir = '/scratch/eshkev001/imputationReference/'
+    fastaRef = '/scratch/eshkev001/db/hg19.fa'
+    dbsnp = '/scratch/eshkev001/db/dbsnp151_hg19.vcf.gz'
+    indelsRef = '/scratch/eshkev001/db/1000G_phase1.indels.hg19.sites.vcf.gz'
+    hapmap = '/scratch/eshkev001/db/hapmap_3.3.hg19.sites.vcf.gz'
+    omniRef = '/scratch/eshkev001/db/1000G_omni2.5.hg19.sites.vcf.gz'
+    snpRef = '/scratch/eshkev001/db/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz'
 }
 
 process {
 
-    //beforeScript = 'module load chpc/python/3.7.0'
-    beforeScript = 'module load chpc/singularity/3.5.3'
- 
     errorStrategy = { task.exitStatus in [135,255] ? 'retry' : 'finish' }
     maxErrors = '-1'
     maxRetries = 3
- 
-    cpus = 24
-    time = 3.h
-    //memory = 50.GB
-
-    clusterOptions = '-P CBBI1243 -l select=1 -m b'
-
+    
+    // Resources
     withLabel:smallMemory {
         cpus = 24
         time = 5.m
@@ -52,7 +45,22 @@ process {
         memory = 100.GB
     }
     withLabel:readAligner {
-        time = 30.h
+        time = 10.h
+        cpus = 24
+        memory = 100.GB
+    }
+    withLabel:bamSorter {
+        time = 70.m
+        cpus = 24
+        memory = 100.GB
+    }
+    withLabel:bamIndexer {
+        time = 10.m
+        cpus = 24
+        memory = 8.GB
+    }
+    withLabel:duplicateMarker {
+        time = 90.m
         cpus = 24
         memory = 100.GB
     }
@@ -76,6 +84,8 @@ process {
         time = 30.m
         memory = 1.GB
     }
+
+    // Containers
     withLabel:plink2 {
         container = "${params.containersDir}plink2_latest.sif"
     }
@@ -86,7 +96,7 @@ process {
         container = "${params.containersDir}py3plink_latest.sif"
     }
     withLabel:Rbase {
-	container = "${params.containersDir}R.sif"
+        container = "${params.containersDir}R.sif"
     }
     withLabel:samtools {
         container = "${params.containersDir}samtools_1.11.sif"
