--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -1,4 +1,4 @@
-includeConfig "${projectDir}/configs/generalSettings.config"
+includeConfig "${projectDir}/configs/base.config"
 
 params {
     fastqDir = 'NULL'
@@ -8,4 +8,11 @@ params {
     ped = 'NULL'
 }
 
-
+profiles {
+    ucthpc {
+        includeConfig "${projectDir}/configs/ucthpc.config"
+    }
+    chpc {
+        includeConfig "${projectDir}/configs/chpc.config"
+    }
+}
