--- a/variantCalling/configs/ucthpc.config
+++ b/variantCalling/configs/ucthpc.config
@@ -8,10 +8,10 @@ includeConfig "${projectDir}/configs/singularity.config"
 includeConfig "${projectDir}/configs/base.config"
 
 process {
-    beforeScript = 'module load software/nextflow-21.10.6'
+    //beforeScript = 'module load software/nextflow-21.10.6'
     cpus = 24
     time = 30.m
     memory = 30.GB
-    clusterOptions = '--account humgen --partition sadacc-short --nodes=3'
+    clusterOptions = '--account humgen --partition sadacc-long --nodes=1'
 }
 
