update config files

--- a/variantCalling/configs/containers-referenceDBs.config
+++ b/variantCalling/configs/containers-referenceDBs.config
@@ -1,4 +1,15 @@
-includeConfig "${projectDir}/configs/base.config"
+params {
+
+    containersDir = '/mnt/lustre/groups/CBBI1243/KEVIN/containers/'
+
+    referenceDir = '/mnt/lustre/users/kesoh/imputationReference/'
+    fastaRef = '/mnt/lustre/groups/1000genomes/annotation/REF_VC/hg19/ucsc.hg19.fasta'
+    dbsnp = '/mnt/lustre/groups/CBBI1243/KEVIN/db/dbsnp_138.hg19.vcf.gz'
+    indelsRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.indels.hg19.sites.vcf.gz'
+    hapmap = '/mnt/lustre/groups/CBBI1243/KEVIN/db/hapmap_3.3.hg19.sites.vcf.gz'
+    omniRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_omni2.5.hg19.sites.vcf.gz'
+    snpRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz'
+}
 
 process {
     withLabel:plink2 {
