--- a/variantCalling/configs/ucthpc.config
+++ b/variantCalling/configs/ucthpc.config
@@ -6,6 +6,7 @@ executor {
 
 includeConfig "${projectDir}/configs/singularity.config"
 includeConfig "${projectDir}/configs/base.config"
+includeConfig "${projectDir}/configs/containers-referenceDBs.config"
 
 process {
     //beforeScript = 'module load software/nextflow-21.10.6'
