--- a/variantCalling/configs/chpc.config
+++ b/variantCalling/configs/chpc.config
@@ -5,15 +5,14 @@ executor {
 }
 
 includeConfig "${projectDir}/configs/singularity.config"
-includeConfig "${projectDir}/configs/containers.config"
 includeConfig "${projectDir}/configs/base.config"
+includeConfig "${projectDir}/configs/containers-referenceDBs.config"
 
 process {
     //beforeScript = 'module load chpc/python/3.7.0'
     beforeScript = 'module load chpc/singularity/3.5.3'
     cpus = 24
     time = 3.h
-    //memory = 50.GB
     clusterOptions = '-P CBBI1243 -l select=1 -m b'
 }
 
