update memory requirements

--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -36,9 +36,9 @@ process {
         memory = 8.GB
     }
     withLabel:duplicateMarker {
-        time = 50.m
-        cpus = 10
-        memory = 100.GB
+        time = 5.h
+        cpus = 1
+        memory = 200.GB
     }
     withLabel:baseRecalibrator {
         time = 5.h
