--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -1,11 +1,14 @@
 includeConfig "${projectDir}/configs/base.config"
 
 params {
-    fastqDir = 'NULL'
-    bamDir = 'NULL'
+    inputFileType = 'FASTQ'  // [FASTQ|BAM]
+    inputDir = 'NULL'
     outputDir = 'NULL'
     outPrefix = 'NULL'
     ped = 'NULL'
+
+    // Select a mode to run GATK commands with multi-threading (true) or not (false)
+    sparkMode = false
 }
 
 profiles {
