update variant calling pipeline

--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -66,7 +66,7 @@ process {
         memory = 50.GB
     }
     withLabel:variantCaller {
-        time = { 5.h * task.attemp }
+        time = { 5.h * task.attempt }
         cpus = 24
         memory = { 50.GB * task.attempt }
     }
