--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -20,8 +20,18 @@ process {
         cpus = 24
         memory = 100.GB
     }
+    withLabel:fastqc_mem {
+        time = { 10.m * task.attempt }
+        cpus = 24
+        memory = { 20.GB * task.attempt }
+    }
+    withLabel:multiqc_mem {
+        time = { 10.m * task.attempt }
+        cpus = 24
+        memory = { 5.GB * task.attempt }
+    }
     withLabel:readAligner {
-        time = 10.h
+        time = 30.m
         cpus = 24
         memory = 30.GB
     }
