--- a/variantCalling/configs/chpc.config
+++ b/variantCalling/configs/chpc.config
@@ -1,12 +1,13 @@
 executor {
     name = 'pbspro'
-    queue = 'serial'
+    queue = 'normal'
     queueSize = 10
 }
 
 includeConfig "${projectDir}/configs/singularity.config"
 includeConfig "${projectDir}/configs/base.config"
 includeConfig "${projectDir}/configs/containers-referenceDBs.config"
+//includeConfig "${projectDir}/configs/refs-shifter-containers.config"
 
 process {
     //beforeScript = 'module load chpc/python/3.7.0'
