--- a/variantCalling/configs/containers-referenceDBs.config
+++ b/variantCalling/configs/containers-referenceDBs.config
@@ -1,45 +1,45 @@
 params {
 
-    containersDir = '/mnt/lustre/groups/CBBI1243/KEVIN/containers/'
+    containersDir = ''
 
-    referenceDir = '/mnt/lustre/users/kesoh/imputationReference/'
-    fastaRef = '/mnt/lustre/groups/1000genomes/annotation/REF_VC/hg19/ucsc.hg19.fasta'
-    dbsnp = '/mnt/lustre/groups/CBBI1243/KEVIN/db/dbsnp_138.hg19.vcf.gz'
-    indelsRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.indels.hg19.sites.vcf.gz'
-    hapmap = '/mnt/lustre/groups/CBBI1243/KEVIN/db/hapmap_3.3.hg19.sites.vcf.gz'
-    omniRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_omni2.5.hg19.sites.vcf.gz'
-    snpRef = '/mnt/lustre/groups/CBBI1243/KEVIN/db/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz'
+    referenceDir = ''
+    fastaRef = "${params.referenceDir}/hg19/ucsc.hg19.fasta"
+    dbsnp = "${params.referenceDir}/dbsnp_138.hg19.vcf.gz"
+    indelsRef = "${params.referenceDir}/1000G_phase1.indels.hg19.sites.vcf.g"
+    hapmap = "${params.referenceDir}/hapmap_3.3.hg19.sites.vcf.gz"
+    omniRef = "${params.referenceDir}/1000G_omni2.5.hg19.sites.vcf.gz"
+    snpRef = "${params.referenceDir}/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz"
 }
 
 process {
     withLabel:plink2 {
-        container = "${params.containersDir}plink2_latest.sif"
+        container = "${params.containersDir}/plink2_latest.sif"
     }
     withLabel:bcftools {
-        container = "${params.containersDir}bcftools_latest.sif"
+        container = "${params.containersDir}/bcftools_latest.sif"
     }
     withLabel:plink {
-        container = "${params.containersDir}py3plink_latest.sif"
+        container = "${params.containersDir}/py3plink_latest.sif"
     }
     withLabel:Rbase {
-        container = "${params.containersDir}R.sif"
+        container = "${params.containersDir}/R.sif"
     }
     withLabel:samtools {
-        container = "${params.containersDir}samtools_1.11.sif"
+        container = "${params.containersDir}/samtools_1.11.sif"
     }
     withLabel:bwa_bgzip {
-        container = "${params.containersDir}bwa_bgzip_latest.sif"
+        container = "${params.containersDir}/bwa_bgzip_latest.sif"
     }
     withLabel:gatk {
-        container = "${params.containersDir}gatk_latest.sif"
+        container = "${params.containersDir}/gatk_latest.sif"
     }
     withLabel:fastqc {
-        container = "${params.containersDir}fastqc.sif"
+        container = "${params.containersDir}/fastqc.sif"
     }
     withLabel:multiqc {
-        container = "${params.containersDir}multiqc_latest.sif"
+        container = "${params.containersDir}/multiqc_latest.sif"
     }
     withLabel:bgzip {
-        container = "${params.containersDir}bgzip_latest.sif"
+        container = "${params.containersDir}/bgzip_latest.sif"
     }
 }
