--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -1,11 +1,11 @@
 includeConfig "${projectDir}/configs/base.config"
 
 params {
-    inputFileType = 'FASTQ'  // [FASTQ|BAM]
-    inputDir = 'NULL'
-    outputDir = 'NULL'
-    outPrefix = 'NULL'
-    ped = 'NULL'
+    inputFileType = 'FASTQ'		// required: [FASTQ|BAM]
+    inputDir = 'NULL'			// required
+    outputDir = 'NULL'			// required
+    outPrefix = 'NULL'			// required
+    ped = 'NULL'			// optional
 
     // Select a mode to run GATK commands with multi-threading (true) or not (false)
     sparkMode = false
