create ref profiles

--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -18,4 +18,10 @@ profiles {
     chpc {
         includeConfig "${projectDir}/configs/chpc.config"
     }
+    hg19 {
+        includeConfig "${projectDir}/configs/reference-hg19.config"
+    }
+    hg38 {
+        includeConfig "${projectDir}/configs/reference-hg38.config"
+    }
 }
