--- a/variantCalling/configs/containers.config
+++ b/variantCalling/configs/containers.config
@@ -33,4 +33,7 @@ process {
     withLabel:bgzip {
         container = "${params.containersDir}bgzip_latest.sif"
     }
+    withLabel:dragmap {
+        container = "${params.containers_dir}/dragmap_latest.sif"
+    }
 }
