--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -1,5 +1,6 @@
 params {
-    inputFileType = 'FASTQ'		// required: [FASTQ|BAM]
+    aligner = 'DRAGMAP'			// optional: options: BWA, DRAGMAP [default: BWA]
+    inputFileType = 'FASTQ'		// required: options: FASTQ, BAM
     inputDir = 'NULL'			// required
     outputDir = 'NULL'			// required
     outPrefix = 'NULL'			// required
