--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -20,68 +20,73 @@ process {
         cpus = 24
         memory = 100.GB
     }
-    withLabel:fastqc_mem {
-        time = { 10.m * task.attempt }
-        cpus = 24
-        memory = { 20.GB * task.attempt }
+    withLabel:fastqcMem {
+        time = 24.h
+        cpus = 22
+        memory = 100.GB
     }
-    withLabel:multiqc_mem {
-        time = { 10.m * task.attempt }
-        cpus = 24
-        memory = { 5.GB * task.attempt }
+    withLabel:multiqcMem {
+        time = 10.m
+        cpus = 1
+        memory = 50.GB
     }
     withLabel:readAligner {
-        time = 30.m
-        cpus = 24
-        memory = 30.GB
+        time = 24.h
+        cpus = 22
+        memory = 100.GB
+    }
+    withLabel:samConverter {
+        cpus = 10
+        time = { 30.m * task.attempt }
+        memory = { 10.GB * task.attempt }
     }
     withLabel:bamSorter {
         time = 70.m
-        cpus = 24
+        cpus = 22
         memory = 100.GB
     }
     withLabel:bamIndexer {
-        time = 10.m
-        cpus = 24
-        memory = 8.GB
+        time = 20.m
+        cpus = 10
+        memory = 10.GB
     }
     withLabel:fixBam {
-        time = { 10.m * task.attempt }
-        cpus = 24
-        memory = { 50.GB * task.attempt }
+        time = { 30.m * task.attempt }
+        cpus = 22
+        memory = { 100.GB * task.attempt }
     }
     withLabel:duplicateMarker {
-        time = { 1.h * task.attempt }
+        time = { 15.h * task.attempt }
         cpus = 1
-        memory = { 80.GB * task.attempt }
+        memory = { 100.GB * task.attempt }
     }
     withLabel:duplicateMarkerSpark {
-        time = { 1.h * task.attempt }
+        time = { 30.h * task.attempt }
         cpus = 5
-        memory = { 80.GB * task.attempt }
+        memory = { 100.GB * task.attempt }
     }
     withLabel:baseRecalibrator {
-        time = 5.h
-        cpus = 24
-        memory = 80.GB
+        time = 15.h
+        cpus = 22
+        memory = 100.GB
     }
     withLabel:baseRecalibratorSpark {
-        time = { 5.h * task.attempt }
-        cpus = 24
-        memory = { 50.GB * task.attempt }
+        time = { 24.h * task.attempt }
+        cpus = 5
+        memory = { 200.GB * task.attempt }
     }
     withLabel:applyBqsr {
-        time = 3.h
-        cpus = 24
-        memory = 50.GB
+        time = 10.h
+        cpus = 22
+        memory = 80.GB
     }
     withLabel:variantCaller {
-        time = { 5.h * task.attempt }
-        cpus = 24
-        memory = { 50.GB * task.attempt }
+        time = { 48.h * task.attempt }
+        cpus = 22
+        memory = { 100.GB * task.attempt }
     }
     withLabel:mediumMemory {
-        cpus = 24
+        cpus = 5
         time = { 5.m * task.attempt }
         memory = { 1.GB * task.attempt }
     }
