add variant call filtering scripts

--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -10,6 +10,11 @@ process {
         time = 5.m
         memory = 2.GB
     }
+    withLabel:mediumMemory {
+        cpus = 22
+        time = { 5.m * task.attempt }
+        memory = { 1.GB * task.attempt }
+    }
     withLabel:bigMemory {
         time = { 15.m * task.attempt }
         cpus = 24
@@ -56,8 +61,8 @@ process {
         memory = { 100.GB * task.attempt }
     }
     withLabel:duplicateMarker {
-        time = { 15.h * task.attempt }
-        cpus = 1
+        time = { 30.h * task.attempt }
+        cpus = 24
         memory = { 100.GB * task.attempt }
     }
     withLabel:duplicateMarkerSpark {
@@ -85,10 +90,15 @@ process {
         cpus = 22
         memory = { 100.GB * task.attempt }
     }
-    withLabel:mediumMemory {
-        cpus = 5
-        time = { 5.m * task.attempt }
-        memory = { 1.GB * task.attempt }
+    withLabel:vqsr {
+        cpus = 22
+        time = { 2.h * task.attempt }
+        memory = { 50.GB * task.attempt }
+    }
+    withLabel:applyVqsr {
+        cpus = 22
+        time = { 1.h * task.attempt }
+        memory = { 50.GB * task.attempt }
     }
 }
 
