--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -1,4 +1,5 @@
 params {
+    /*---- ALIGNMENT AND VARIANT CALLING PARAMS ----*/
     aligner = 'DRAGMAP'			// optional: options: BWA, DRAGMAP [default: BWA]
     inputFileType = 'FASTQ'		// required: options: FASTQ, BAM
     inputDir = 'NULL'			// required
@@ -8,6 +9,12 @@ params {
 
     // Select a mode to run GATK commands with multi-threading (true) or not (false)
     sparkMode = false
+
+    /*---- VCF FILTERING AND ANNOTATION PARAMS ----*/
+    vcf_dir = 'NULL'
+    vcf = 'NULL'
+    minDP = 10
+    minGQ = 20
 }
 
 profiles {
