add annotation scripts, edit containers config

--- a/variantCalling/configs/base.config
+++ b/variantCalling/configs/base.config
@@ -100,5 +100,10 @@ process {
         time = { 1.h * task.attempt }
         memory = { 50.GB * task.attempt }
     }
+    withLabel:annovarMem {
+        cpus = 24
+        time = 2.h
+        memory = 50.GB
+    }
 }
 
