--- a/variantCalling/configs/containers.config
+++ b/variantCalling/configs/containers.config
@@ -1,6 +1,4 @@
-params {
-    containersDir = '/scratch/eshkev001/containers/'
-}
+includeConfig "${projectDir}/configs/containersDir.config"
 
 process {
     withLabel:plink2 {
@@ -34,6 +32,9 @@ process {
         container = "${params.containersDir}bgzip_latest.sif"
     }
     withLabel:dragmap {
-        container = "${params.containers_dir}/dragmap_latest.sif"
+        container = "${params.containersDir}dragmap_latest.sif"
+    }
+    withLabel:annovar {
+        container = "${params.containersDir}annovar_latest.sif"
     }
 }
