--- a/variantCalling/nextflow.config
+++ b/variantCalling/nextflow.config
@@ -10,11 +10,14 @@ params {
     // Select a mode to run GATK commands with multi-threading (true) or not (false)
     sparkMode = false
 
-    /*---- VCF FILTERING AND ANNOTATION PARAMS ----*/
+    /*---- VCF FILTERING PARAMS ----*/
     vcf_dir = 'NULL'
     vcf = 'NULL'
     minDP = 10
     minGQ = 20
+
+    /*---- ANNOTATION PARAMS ----*/
+    annotate_dir = 'NULL'
 }
 
 profiles {
