add trimming pipeline

--- a/configs/containers.config
+++ b/configs/containers.config
@@ -28,6 +28,9 @@ process {
     withLabel:multiqc {
         container = "${params.containersDir}multiqc_latest.sif"
     }
+    withLabel:trimatic {
+        container = "${params.containersDir}trimmomatic_latest.sif"
+    }
     withLabel:bgzip {
         container = "${params.containersDir}bgzip_latest.sif"
     }
