update config, add trimming workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 params {
     /*---- ALIGNMENT AND VARIANT CALLING PARAMS ----*/
-    aligner = 'DRAGMAP'			// optional: options: BWA, DRAGMAP [default: BWA]
+    aligner = 'BWA'			// optional: options: BWA, DRAGMAP [default: BWA]
     inputFileType = 'FASTQ'		// required: options: FASTQ, BAM
     inputDir = 'NULL'			// required
     outputDir = 'NULL'			// required
@@ -15,6 +15,10 @@ params {
     vcf = 'NULL'
     minDP = 10
     minGQ = 20
+
+    /*---- READS TRIMMING PARAMS ----*/
+    adapter = 'NP'			// use 'NULL' to see option of adapters
+    min_length = 36
 
     /*---- ANNOTATION PARAMS ----*/
     annotate_dir = 'NULL'
