optimized cluster resources

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,12 @@ profiles {
     ucthpc {
         includeConfig "${projectDir}/configs/ucthpc.config"
     }
+    sadacclong {
+        includeConfig "${projectDir}/configs/uct-sadacc-long.config"
+    }
+    sadaccshort {
+        includeConfig "${projectDir}/configs/uct-sadacc-short.config"
+    }
     chpc {
         includeConfig "${projectDir}/configs/chpc.config"
     }
