add trim workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,8 @@ params {
     /*---- READS TRIMMING PARAMS ----*/
     adapter = 'NP'			// use 'NULL' to see option of adapters
     min_length = 36
+    headcrop = 0                       // number of bases to remove from the start of reads
+    crop = 0                            // number of bases to remove from the end of reads
 
     /*---- ANNOTATION PARAMS ----*/
     annotate_dir = 'NULL'
