--- a/configs/base.config
+++ b/configs/base.config
@@ -1,8 +1,8 @@
 process {
 
-    errorStrategy = { task.exitStatus in [135,143,255] ? 'retry' : 'terminate' }
+    errorStrategy = { task.exitStatus in [135,140,143,255] ? 'retry' : 'terminate' }
     maxErrors = '-1'
-    maxRetries = 5
+    maxRetries = 3
     
     // Resources
     withLabel:smallMemory {
@@ -17,18 +17,18 @@ process {
     }
     withLabel:bigMemory {
         time = { 15.m * task.attempt }
-        cpus = 24
-        memory = { 30.GB * task.attempt }
+        cpus = 11
+        memory = { 90.GB * task.attempt }
     }
     withLabel:longRun {
         time = 2.h
-        cpus = 24
-        memory = 100.GB
+        cpus = 11
+        memory = 90.GB
     }
     withLabel:fastqcMem {
         time = 5.h
-        cpus = 2
-        memory = 70.GB
+        cpus = 4
+        memory = 25.GB
     }
     withLabel:multiqcMem {
         time = 5.m
@@ -36,44 +36,44 @@ process {
         memory = 5.GB
     }
     withLabel:readAligner {
-        time = 12.h
-        cpus = 2
-        memory = 50.GB
+        time = 30.h
+        cpus = 40
+        memory = { 90.GB * task.attempt }
     }
     withLabel:samConverter {
-        cpus = 2
+        cpus = 11
         time = { 30.m * task.attempt }
-        memory = { 8.GB * task.attempt }
+        memory = { 15.GB * task.attempt }
     }
     withLabel:bamSorter {
-        time = 30.m
+        time = { 4.h * task.attempt }
         cpus = 2
-        memory = 8.GB
+        memory = { 20.GB * task.attempt }
     }
     withLabel:bamIndexer {
         time = 1.h
-        cpus = 2
-        memory = 30.GB
+        cpus = 11
+        memory = 25.GB
     }
     withLabel:fixBam {
         time = { 30.m * task.attempt }
-        cpus = 2
-        memory = { 100.GB * task.attempt }
+        cpus = 11
+        memory = { 90.GB * task.attempt }
     }
     withLabel:duplicateMarker {
-        time = { 30.h * task.attempt }
-        cpus = 2
-        memory = { 100.GB * task.attempt }
+        time = { 12.h * task.attempt }
+        cpus = 40
+        memory = { 90.GB * task.attempt }
     }
     withLabel:duplicateMarkerSpark {
         time = { 30.h * task.attempt }
-        cpus = 2
-        memory = { 100.GB * task.attempt }
+        cpus = 11
+        memory = { 90.GB * task.attempt }
     }
     withLabel:baseRecalibrator {
-        time = 15.h
-        cpus = 2
-        memory = 100.GB
+        time = 12.h
+        cpus = 11
+        memory = 90.GB
     }
     withLabel:baseRecalibratorSpark {
         time = { 4.h * task.attempt }
@@ -82,28 +82,38 @@ process {
     }
     withLabel:applyBqsr {
         time = { 4.h * task.attempt }
-        cpus = 2
-        memory = { 8.GB * task.attempt }
+        cpus = 4
+        memory = { 15.GB * task.attempt }
     }
     withLabel:variantCaller {
-        time = { 60.h * task.attempt }
-        cpus = 2
-        memory = { 20.GB * task.attempt }
+        time = { 130.h * task.attempt }
+        cpus = 40
+        memory = { 100.GB * task.attempt }
     }
     withLabel:vqsr {
-        cpus = 2
+        cpus = 4
         time = { 2.h * task.attempt }
         memory = { 50.GB * task.attempt }
     }
     withLabel:applyVqsr {
-        cpus = 2
+        cpus = 6
         time = { 1.h * task.attempt }
         memory = { 50.GB * task.attempt }
     }
     withLabel:annovarMem {
         cpus = 22
         time = 2.h
-        memory = 100.GB
+        memory = 90.GB
+    }
+    withLabel:deepv_caller {
+        cpus = 40
+        time = { 1.h * task.attempt }
+        memory = { 10.GB * task.attempt }
+    }
+    withLabel:nexus_caller {
+        cpus = 40
+        time = { 1.h * task.attempt }
+        memory = { 10.GB * task.attempt }
     }
 }
 
