--- a/configs/containers.config
+++ b/configs/containers.config
@@ -40,4 +40,10 @@ process {
     withLabel:annovar {
         container = "${params.containersDir}annovar_latest.sif"
     }
+    withLabel:deepvariant {
+        container = "${params.containersDir}deepvariant_latest.sif"
+    }
+    withLabel:glnexus {
+        container = "${params.containersDir}glnexus_latest.sif"
+    }
 }
