--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,8 @@ params {
     outputDir = 'NULL'			// required
     outPrefix = 'NULL'			// required
     ped = 'NULL'			// optional
+    singleCaller = 'deepvariant'	// options: gatk, deepvariant
+    jointCaller = 'glnexus'		// options: gatk, glnexus
 
     // Select a mode to run GATK commands with multi-threading (true) or not (false)
     sparkMode = false
