--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ params {
     vcf = 'NULL'
     minDP = 10
     minGQ = 20
+    minAC = 1				// to remove singletons, set to 2
 
     /*---- READS TRIMMING PARAMS ----*/
     adapter = 'NP'			// use 'NULL' to see option of adapters
@@ -26,6 +27,7 @@ params {
 
     /*---- ANNOTATION PARAMS ----*/
     annotate_dir = 'NULL'
+    minimal = false
 }
 
 profiles {
