--- a/configs/chpc.config
+++ b/configs/chpc.config
@@ -1,7 +1,7 @@
 executor {
     name = 'pbspro'
     queue = 'normal'
-    queueSize = 10
+    queueSize = params.njobs
 }
 
 includeConfig "${projectDir}/configs/singularity.config"
