--- a/configs/containers.config
+++ b/configs/containers.config
@@ -2,48 +2,57 @@ includeConfig "${projectDir}/configs/containersDir.config"
 
 process {
     withLabel:plink2 {
-        container = "${params.containersDir}plink2_latest.sif"
+        container = "${params.containersDir}plink2_latest.img"
     }
     withLabel:bcftools {
-        container = "${params.containersDir}bcftools_latest.sif"
+        container = "${params.containersDir}bcftools_latest.img"
     }
     withLabel:plink {
-        container = "${params.containersDir}py3plink_latest.sif"
+        container = "${params.containersDir}py3plink_latest.img"
     }
     withLabel:Rbase {
-        container = "${params.containersDir}R.sif"
+        container = "${params.containersDir}R.img"
     }
     withLabel:samtools {
-        container = "${params.containersDir}samtools_1.11.sif"
+        container = "${params.containersDir}samtools_1.11.img"
     }
     withLabel:bwa_bgzip {
-        container = "${params.containersDir}bwa_bgzip_latest.sif"
+        container = "${params.containersDir}bwa_bgzip_latest.img"
     }
     withLabel:gatk {
-        container = "${params.containersDir}gatk_latest.sif"
+        container = "${params.containersDir}gatk_latest.img"
     }
     withLabel:fastqc {
-        container = "${params.containersDir}fastqc.sif"
+        container = 'sickleinafrica/fastqc:0.11.9'
     }
     withLabel:multiqc {
-        container = "${params.containersDir}multiqc_latest.sif"
+        container = "${params.containersDir}multiqc_latest.img"
     }
     withLabel:trimatic {
-        container = "${params.containersDir}trimmomatic_latest.sif"
+        container = "${params.containersDir}trimmomatic_latest.img"
+    }
+    withLabel:trimgalore {
+        container = "vibsinglecellnf/trimgalore:trimgalore-0.6.7-cutadapt-4.2"
     }
     withLabel:bgzip {
-        container = "${params.containersDir}bgzip_latest.sif"
+        container = "${params.containersDir}bgzip_latest.img"
     }
     withLabel:dragmap {
-        container = "${params.containersDir}dragmap_latest.sif"
+        container = "${params.containersDir}dragmap_latest.img"
     }
     withLabel:annovar {
-        container = "${params.containersDir}annovar_latest.sif"
+        container = "${params.containersDir}annovar_latest.img"
     }
     withLabel:deepvariant {
-        container = "${params.containersDir}deepvariant_latest.sif"
+        container = "${params.containersDir}deepvariant_latest.img"
     }
     withLabel:glnexus {
-        container = "${params.containersDir}glnexus_latest.sif"
+        container = "${params.containersDir}glnexus_latest.img"
+    }
+    withLabel:dysgu {
+        container = "${params.containersDir}sickleinafrica-dysgu-1.6.1.img"
+    }
+    withLabel:manta {
+        container = 'szarate/manta:v1.6.0'
     }
 }
