--- a/configs/singularity.config
+++ b/configs/singularity.config
@@ -1,6 +1,6 @@
 singularity {
     enabled = true
-    automounts = true
-    cacheDir = "${HOME}/singularity"
+    autoMounts = true
+    cacheDir = "/scratch/eshkev001/containers/"
 }
 
