--- a/configs/uct-ada.config
+++ b/configs/uct-ada.config
@@ -1,5 +1,6 @@
 executor {
-    name = 'local'
+    name = 'slurm'
+    queue = 'ada'
     queueSize = params.njobs
 }
 
@@ -8,8 +9,9 @@ includeConfig "${projectDir}/configs/base.config"
 includeConfig "${projectDir}/configs/containers.config"
 
 process {
-    cpus = 4
-    time = 10.h
-    memory = 2.GB
+    cpus = 40
+    time = 5.h
+    memory = 50.GB
+    clusterOptions = '--account humgen --partition ada --nodes=1'
 }
 
