--- a/configs/uct-sadacc-long.config
+++ b/configs/uct-sadacc-long.config
@@ -1,7 +1,7 @@
 executor {
     name = 'slurm'
     queue = 'sadacc-long'
-    queueSize = 30
+    queueSize = params.njobs
 }
 
 includeConfig "${projectDir}/configs/singularity.config"
@@ -9,7 +9,7 @@ includeConfig "${projectDir}/configs/base.config"
 includeConfig "${projectDir}/configs/containers.config"
 
 process {
-    cpus = 24
+    cpus = 11
     time = 30.m
     memory = 30.GB
     clusterOptions = '--account humgen --partition sadacc-long --nodes=1'
