--- a/configs/uct-sadacc-short.config
+++ b/configs/uct-sadacc-short.config
@@ -1,7 +1,7 @@
 executor {
     name = 'slurm'
     queue = 'sadacc-short'
-    queueSize = 50
+    queueSize = params.njobs
 }
 
 includeConfig "${projectDir}/configs/singularity.config"
