--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,19 @@
 params {
+    njobs = 20
+    threads = 4
+
     /*---- ALIGNMENT AND VARIANT CALLING PARAMS ----*/
-    aligner = 'BWA'			// optional: options: BWA, DRAGMAP [default: BWA]
-    inputFileType = 'FASTQ'		// required: options: FASTQ, BAM
+    pe = true				// optional: true, false [dfault: false]   (Whether reads are paired-end or single end)
+    aligner = 'BWA'			// optional: BWA, DRAGMAP [default: BWA]
+    inputFileType = 'FASTQ'		// required: FASTQ, BAM, CRAM
     inputDir = 'NULL'			// required
     outputDir = 'NULL'			// required
     outPrefix = 'NULL'			// required
     ped = 'NULL'			// optional
-    singleCaller = 'deepvariant'	// options: gatk, deepvariant
+    singleCaller = 'dysgu'	// options: gatk, deepvariant, dysgu, manta
+    exome = false                       // for manta structural variant calling, specify whether WES or WGS
     jointCaller = 'glnexus'		// options: gatk, glnexus
+    gvcf_dir = ''			// if GVCF files already exist and only joint calling is required
 
     // Select a mode to run GATK commands with multi-threading (true) or not (false)
     sparkMode = false
@@ -20,14 +26,18 @@ params {
     minAC = 1				// to remove singletons, set to 2
 
     /*---- READS TRIMMING PARAMS ----*/
+    trimmer = 'trimmomatic'		// options: trimmomatic, trimgalore [default: trimgalore]
     adapter = 'NP'			// use 'NULL' to see option of adapters
     min_length = 36
-    headcrop = 0                       // number of bases to remove from the start of reads
-    crop = 0                            // number of bases to remove from the end of reads
+    headcrop = 10                       // number of bases to remove from the start of reads
+    crop = 5                            // number of bases to remove from the end of reads
 
     /*---- ANNOTATION PARAMS ----*/
     annotate_dir = 'NULL'
     minimal = false
+
+    /*---- GENERAL ----*/
+    containersDir = '/scratch/eshkev001/containers/'
 }
 
 profiles {
@@ -43,10 +53,19 @@ profiles {
     chpc {
         includeConfig "${projectDir}/configs/chpc.config"
     }
+    uctada {
+        includeConfig "${projectDir}/configs/uct-ada.config"
+    }
     hg19 {
         includeConfig "${projectDir}/configs/reference-hg19.config"
     }
     hg38 {
         includeConfig "${projectDir}/configs/reference-hg38.config"
+    }
+    t2t {
+        includeConfig "${projectDir}/configs/reference-chm13.config"
+    }
+    local {
+        includeConfig "${projectDir}/configs/local.config"
     }
 }
