--- a/configs/test.config
+++ b/configs/test.config
@@ -1,69 +1,84 @@
-process {
-    beforeScript = 'ulimit -c unlimited; hostname; date; pwd'
+executor {
+    name = 'slurm'
+    queue = 'sadacc-long'
+    queueSize = params.njobs
+}
 
-    errorStrategy = { task.exitStatus in [1,3,127,135,139,140,143,245,249,250,255] ? 'retry' : 'finish' }
+includeConfig "${projectDir}/configs/singularity.config"
+includeConfig "${projectDir}/configs/containers.config"
+
+process {
+    cpus = 40
+    time = 1.h
+    memory = 50.GB
+    clusterOptions = '--account humgen --partition sadacc-long --nodes=1'
+}
+
+process {
+
+    errorStrategy = { task.exitStatus in [127,135,139,140,143,245,255] ? 'retry' : 'terminate' }
     maxErrors = '-1'
     maxRetries = 3
     
     // Resources
     withLabel:smallMemory {
-        cpus = 24
+        cpus = 4
         time = 5.m
         memory = 2.GB
     }
     withLabel:mediumMemory {
-        cpus = 22
+        cpus = 4
         time = { 5.m * task.attempt }
         memory = { 1.GB * task.attempt }
     }
     withLabel:bigMemory {
         time = { 15.m * task.attempt }
-        cpus = 11
+        cpus = 4
         memory = { 90.GB * task.attempt }
     }
     withLabel:longRun {
         time = 10.h
-        cpus = 24
+        cpus = 4
         memory = 90.GB
     }
     withLabel:fastqcMem {
-        time = 2.h
-        cpus = { params.threads }
-        memory = 5.GB
+        time = 5.h
+        cpus = 4
+        memory = 25.GB
     }
     withLabel:multiqcMem {
-        time = 40.m
+        time = 1.h
         cpus = 4
         memory = 10.GB
     }
     withLabel:readAligner {
-        time = 90.m
-        cpus = { params.threads }
-        memory = { 50.GB * task.attempt }
+        time = 30.h
+        cpus = 4
+        memory = { 90.GB * task.attempt }
     }
     withLabel:samConverter {
-        cpus = { params.threads }
+        cpus = 4
         time = { 8.h * task.attempt }
-        memory = { 100.GB * task.attempt }
+        memory = { 50.GB * task.attempt }
     }
     withLabel:bamSorter {
         time = { 8.h * task.attempt }
-        cpus = { params.threads }
+        cpus = 4
         memory = { 50.GB * task.attempt }
     }
     withLabel:bamIndexer {
         time = 1.h
-        cpus = { params.threads }
+        cpus = 4
         memory = 25.GB
     }
     withLabel:fixBam {
         time = { 1.h * task.attempt }
-        cpus = 11
+        cpus = 4
         memory = { 100.GB * task.attempt }
     }
     withLabel:duplicateMarker {
         time = { 12.h * task.attempt }
-        cpus = { params.threads }
+        cpus = 4
         memory = { 90.GB * task.attempt }
     }
     withLabel:duplicateMarkerSpark {
@@ -73,7 +88,7 @@ process {
     }
     withLabel:baseRecalibrator {
         time = 12.h
-        cpus = { params.threads }
+        cpus = 4
         memory = 90.GB
     }
     withLabel:baseRecalibratorSpark {
@@ -83,41 +98,41 @@ process {
     }
     withLabel:applyBqsr {
         time = { 24.h * task.attempt }
-        cpus = { params.threads }
+        cpus = 4
         memory = { 50.GB * task.attempt }
     }
     withLabel:variantCaller {
-        time = { 12.h * task.attempt }
-        cpus = { params.threads }
-        memory = { 20.GB * task.attempt }
+        time = { 130.h * task.attempt }
+        cpus = 4
+        memory = { 100.GB * task.attempt }
     }
     withLabel:vqsr {
-        cpus = { params.threads }
-        time = { 100.h * task.attempt }
-        memory = { 100.GB * task.attempt }
+        cpus = 4
+        time = { 48.h * task.attempt }
+        memory = { 50.GB * task.attempt }
     }
     withLabel:applyVqsr {
-        cpus = { params.threads }
-        time = { 100.h * task.attempt }
-        memory = { 100.GB * task.attempt }
+        cpus = 4
+        time = { 48.h * task.attempt }
+        memory = { 50.GB * task.attempt }
     }
     withLabel:annovarMem {
-        cpus = 43
+        cpus = 4
         time = 24.h
         memory = 90.GB
     }
     withLabel:deepv_caller {
-        cpus = 43
+        cpus = 4
         time = { 30.h * task.attempt }
         memory = { 50.GB * task.attempt }
     }
     withLabel:nexus_caller {
-        cpus = 43
+        cpus = 4
         time = { 25.h * task.attempt }
         memory = { 50.GB * task.attempt }
     }
     withLabel:dysgu_caller {
-        cpus = 43
+        cpus = 4
         time = { 25.h * task.attempt }
         memory = { 50.GB * task.attempt }
     }
