--- a/configs/test.config
+++ b/configs/test.config
@@ -1,20 +1,30 @@
-executor {
-    name = 'slurm'
-    queue = 'sadacc-long'
-    queueSize = params.njobs
-}
+//includeConfig "${projectDir}/configs/singularity.config"
+//includeConfig "${projectDir}/configs/containers.config"
 
-includeConfig "${projectDir}/configs/singularity.config"
-includeConfig "${projectDir}/configs/containers.config"
+params {
+
+  // input data
+  pe = true                               // optional: true, false [dfault: false]   (Whether reads are paired-end or single end)
+  exome = true                            // for manta structural variant calling, specify whether WES or WGS
+  spark = false                           // Select GATK spark mode to run GATK commands with multi-threading (true) or not (false)
+  aligner = 'BWA'                         // optional: BWA, DRAGMAP [default: BWA]
+  input_ftype = 'FASTQ'                   // required: FASTQ, BAM, CRAM     (input file type)
+  input_dir = '/path/to/fastq/'           // required
+  output_dir = '/path/to/save/results/'   // required
+  output_prefix = 'my-ngs'                // required
+  single_caller = 'gatk'                  // options: gatk, deepvariant, dysgu, manta
+  joint_caller = 'gatk'                   // options: gatk, glnexus
+  gvcf_dir = 'NULL'                       // if GVCF files already exist and only joint calling is required
+  threads = 1
+  njobs=1
+}
 
 process {
     cpus = 40
     time = 1.h
     memory = 50.GB
-    clusterOptions = '--account humgen --partition sadacc-long --nodes=1'
-}
 
-process {
+    clusterOptions = '--account humgen --partition sadacc-long --nodes=1'
 
     errorStrategy = { task.exitStatus in [127,135,139,140,143,245,255] ? 'retry' : 'terminate' }
     maxErrors = '-1'
