--- a/system.config
+++ b/system.config
@@ -2,6 +2,7 @@
 params { // one time system configuration
    account		= "humgen" 			// if using SLURM or PBSPRO, provide your cluster project or account name
    queue		= "sadacc-long" 		// if using SLURM or PBSPRO, specify the queue or partition name
+   //njobs		= 10 				// number of jobs to submit at once each time
    containers_dir	= "/scratch/eshkev001/containers/" // if using singularity containers, provide a path where the images will be stored. NB: The path should have sufficient storage capacity
    email		= 'NULL'
 }
