--- a/configs/containers/singularity.config
+++ b/configs/containers/singularity.config
@@ -2,7 +2,7 @@ includeConfig "${projectDir}/configs/containers/base.config"
 
 singularity {
     enabled = true
-    autoMounts = true
+    autoMounts = false
     cacheDir = "${params.containers_dir}"
 }
 
