--- a/configs/references/hg19.config
+++ b/configs/references/hg19.config
@@ -1,12 +1,13 @@
 params {
-    ref_dir = '/scratch/eshkev001/db/hg19/'
-    fastaRef = "${params.ref_dir}/hs37d5.fa"
-    dbsnp = "${params.ref_dir}/dbsnp151_hg19.vcf.gz"
-    indelsRef = "${params.ref_dir}/1000G_phase1.indels.hg19.sites.vcf.gz"
-    hapmap = "${params.ref_dir}/hapmap_3.3.hg19.sites.vcf.gz"
-    omniRef = "${params.ref_dir}/1000G_omni2.5.hg19.sites.vcf.gz"
-    snpRef = "${params.ref_dir}/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz"
-    annovarDB = '/scratch/siaworkflows/public-databases/human/grch37/annotation/annovar/'
+    ref_dir = '/vast/awonkam1/resources/hg19/refgenome/'
+    fastaRef = "${params.ref_dir}/hg19.p13.plusMT.no_alt_analysis_set.fa"
+    gatk_dir = "/vast/awonkam1/resources/hg19/gatkbundles/"
+    dbsnp = "${params.gatk_dir}/dbsnp151_hg19.vcf.gz"
+    indelsRef = "${params.gatk_dir}/1000G_phase1.indels.hg19.sites.vcf.gz"
+    hapmap = "${params.gatk_dir}/hapmap_3.3.hg19.sites.vcf.gz"
+    omniRef = "${params.gatk_dir}/1000G_omni2.5.hg19.sites.vcf.gz"
+    snpRef = "${params.gatk_dir}/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz"
+    annovarDB = '/vast/awonkam1/resources/hg19/annovardbs/'
     buildVersion = 'hg19'
 }
 
