--- a/configs/containers/base.config
+++ b/configs/containers/base.config
@@ -40,7 +40,7 @@ process {
   }
 
   withLabel:fastqc {
-      container = 'docker://sickleinafrica/fastqc:0.11.9'
+      container = "docker://sickleinafrica/fastqc:0.11.9"
   }
 
   withLabel:multiqc {
@@ -51,13 +51,13 @@ process {
       container = "docker://staphb/trimmomatic:latest"
   }
 
-  //withLabel:trimgalore { // vibsinglecellnf-trimgalore-trimgalore-0.6.7-cutadapt-4.2
-  //    container = "docker://sickleinafrica/trimgalore:latest"
-  //}
-
   withLabel:trimgalore {
-      container = "docker://vibsinglecellnf/trimgalore:trimgalore-0.6.7-cutadapt-4.2"
+      container = "docker://sickleinafrica/trimgalore:latest"
   }
+
+  //withLabel:trimgalore {
+  //    container = "docker://vibsinglecellnf/trimgalore:trimgalore-0.6.7-cutadapt-4.2"
+  //}
 
   withLabel:htslib {
       container = "docker://staphb/htslib:latest"
@@ -84,6 +84,6 @@ process {
   }
 
   withLabel:manta {
-      container = 'docker://szarate/manta:v1.6.0'
+      container = "docker://szarate/manta:v1.6.0"
   }
 }
