--- a/system.config
+++ b/system.config
@@ -8,7 +8,7 @@ params { // one time system configuration
   /************************************************************************************************
   ~ account: if using SLURM or PBSPRO, provide your cluster project or account name
   ~ queue: if using SLURM or PBSPRO, specify the queue or partition name
-  ~ containers_dir: f using singularity containers, provide a path where the images will be stored.
+  ~ containers_dir: if using singularity containers, provide a path where the images will be stored.
     NB: The path should have sufficient storage capacity
   ~ email: if you wish to receive information of job status
   /***********************************************************************************************/
