--- a/system.config
+++ b/system.config
@@ -10,7 +10,7 @@ params { // one time system configuration
   ~ queue: if using SLURM or PBSPRO, specify the queue or partition name.
   ~ containers_dir: if using singularity containers, provide a path where the images will be stored.
     NB: The path should have sufficient storage capacity.
-  ~ email: if you wish to receive information on job status
+  ~ email: if you wish to receive information on job status.
   /***********************************************************************************************/
 
 }
