--- a/system.config
+++ b/system.config
@@ -1,4 +1,4 @@
-params { // one time system configuration
+params { // one-time system configuration //
 
   account = 'NULL'       
   queue = 'NULL'         
