update test config

--- a/configs/test.config
+++ b/configs/test.config
@@ -20,9 +20,9 @@ params {
 }
 
 process {
-    cpus = 40
-    time = 1.h
-    memory = 50.GB
+    cpus = 1
+    time = 2.m
+    memory = 50.MB
 
     clusterOptions = '--account humgen --partition sadacc-long --nodes=1'
 
