create workflow dir

--- a/system.config
+++ b/system.config
@@ -1,16 +1,18 @@
 params { // one-time system configuration //
 
-  account = 'NULL'       
-  queue = 'NULL'         
+  account = 'NULL'
+  queue = 'NULL'
   containers_dir = 'NULL'
   email = 'NULL'
+  study_title = 'NULL'
 
   /************************************************************************************************
-  ~ account: if using SLURM or PBSPRO, provide your cluster project or account name.
-  ~ queue: if using SLURM or PBSPRO, specify the queue or partition name.
-  ~ containers_dir: if using singularity containers, provide a path where the images will be stored.
+  ~ account: If using SLURM or PBSPRO, provide your cluster project or account name.
+  ~ queue: If using SLURM or PBSPRO, specify the queue or partition name.
+  ~ containers_dir: If using singularity containers, provide a path where the images will be stored.
     NB: The path should have sufficient storage capacity.
-  ~ email: if you wish to receive information on job status.
+  ~ email: If you wish to receive information on job status.
+  ~ study_title: The name of your study/project.
   /***********************************************************************************************/
 
 }
